refactor Palworld API and security
